Electric_Charging_Stations/static/css/index.css
body {
    background-color : rgb(202, 199, 199);
}

.center-fit {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 100%;
}

.header-1 {
    color:rgb(6, 156, 156);
    margin-top : 35px;
    padding : 30px;
    text-align: left;
    font-weight: bolder;
}

.header-2 {
    color:rgb(6, 156, 156);
    margin-top : 35px;
    padding : 30px;
    text-align: left;
    font-weight: bolder;
}

.text { 
    margin-bottom : 25px;
    margin-top : 36px;
    margin-left : 50px;
    margin-right : 50px;
}

.col-lg-8 {
    padding-right : 15px;
    padding-left : 15px;
    padding-top : 30px;
    padding-bottom : 0px;
    margin-top : 70px;
    background-color : white;
    position : absolute;
    width : 58%;
    left : 3%;
}
  
.col-lg-4 {
    padding-right : 15px;
    padding-left : 15px;
    padding-top : 30px;
    padding-bottom : 30px;
    margin-top : 70px;
    background-color : white;
    position : absolute;
    right : 3%;
}

